--- a/app/src/main/res/layout/_layout_official_item.xml
+++ b/app/src/main/res/layout/_layout_official_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
-             android:layout_height="wrap_content">
+                android:padding="10dp"
+             android:layout_height="180dp">
 
 
 
     <RelativeLayout
 
-        android:layout_marginStart="10dp"
         android:background="#1877F2"
-        android:layout_width="190dp"
+        android:layout_width="180dp"
         android:layout_height="170dp">
 
         <TextView
