--- a/app/src/main/res/layout/activity_family_member_view.xml
+++ b/app/src/main/res/layout/activity_family_member_view.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C4C4C4"
-    tools:context=".ui.OfficialView">
+    tools:context=".ui.ProfileView"
+    android:background="#C4C4C4">
 
-    <ImageView
-        android:src="@drawable/barangay_image"
-        android:layout_width="500dp"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:id="@+id/top"
@@ -40,7 +34,7 @@
 
         <!-- Centered Breaking News Text -->
         <TextView
-            android:text="Barangay Official"
+            android:text="Family Member"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -66,39 +60,10 @@
 
     </LinearLayout>
 
-
-    <EditText
-        android:id="@+id/search_news"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/top"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/white_bg"
-        android:drawableEnd="@drawable/baseline_search_24"
-        android:drawablePadding="3dp"
-        android:paddingStart="10dp"
-        android:text="Search official..."
-        android:textSize="14sp"
-        android:textColor="#4B504C"
-        android:textStyle="italic"
-        android:gravity="center_vertical"
-        android:padding="10dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/search_news"
-        android:id="@+id/_officialItem"
-        android:layout_width="360dp"
-        android:layout_height="match_parent"/>
-
-
     <include
         layout="@layout/_layout_navigation_bar"
         android:id="@+id/buttom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 
 </RelativeLayout>
