--- a/app/src/main/res/layout/activity_message_content.xml
+++ b/app/src/main/res/layout/activity_message_content.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:background="#EEEEEE"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustResize"
     tools:context=".ui.MessageContent">
 
     <!-- Top Bar: Title and Icon -->
     <LinearLayout
-            android:elevation="10dp"
+        android:elevation="10dp"
         android:id="@+id/top"
         android:layout_width="350dp"
         android:layout_height="55dp"
@@ -28,6 +28,7 @@
             android:layout_marginTop="0dp">
 
             <ImageView
+                android:id="@+id/_returnMessage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/baseline_keyboard_arrow_left_24" />
@@ -63,19 +64,16 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/_chatRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/top"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="80dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never"/>
+        android:id="@+id/_chatRecyclerView"
+        android:layout_centerHorizontal="true"
+        android:layout_width="350dp"
+        android:layout_height="match_parent"
+        android:layout_below="@id/top"/>
 
     <!-- Bottom Bar: Input and Send Button -->
     <LinearLayout
+        android:focusableInTouchMode="true"
         android:background="#EEEEEE"
         android:elevation="10dp"
         android:layout_centerHorizontal="true"
@@ -87,6 +85,7 @@
         android:padding="10dp">
 
         <EditText
+            android:id="@+id/_inputBox"
             android:padding="5dp"
             android:background="@color/white"
             android:textSize="12sp"
@@ -96,6 +95,7 @@
             android:layout_weight="1" />
 
         <ImageView
+            android:id="@+id/_sentMessageID"
             android:src="@drawable/baseline_send_24"
             android:layout_width="24dp"
             android:layout_height="35dp"
