--- a/app/src/main/res/layout/activity_message_content.xml
+++ b/app/src/main/res/layout/activity_message_content.xml
@@ -73,6 +73,8 @@
 
     <!-- Bottom Bar: Input and Send Button -->
     <LinearLayout
+
+        android:fitsSystemWindows="true"
         android:focusableInTouchMode="true"
         android:background="#EEEEEE"
         android:elevation="10dp"
