--- a/app/src/main/res/layout/dashboard_view.xml
+++ b/app/src/main/res/layout/dashboard_view.xml
@@ -203,10 +203,12 @@
                 android:layout_height="wrap_content"/>
 
             <include
+                android:fitsSystemWindows="true"
                 layout="@layout/_layout_navigation_bar"
                 android:id="@+id/buttom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </ScrollView>
