--- a/app/src/main/res/layout/_layout_news_item.xml
+++ b/app/src/main/res/layout/_layout_news_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".ui.NewsView"
+    tools:context=".ui.content.news.NewsView"
     tools:ignore="UseCompoundDrawables">
 
     <LinearLayout
