--- a/app/src/main/res/layout/activity_emergency_content.xml
+++ b/app/src/main/res/layout/activity_emergency_content.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C4C4C4"
-    tools:context=".ui.EmergencyContent">
+    tools:context=".ui.content.emergency.EmergencyContent">
 
     <ImageView
         android:src="@drawable/barangay_image"
