--- a/app/src/main/res/layout/activity_message_content.xml
+++ b/app/src/main/res/layout/activity_message_content.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowSoftInputMode="adjustResize"
-    tools:context=".ui.MessageContent">
+    tools:context=".ui.content.message.MessageContent">
 
     <!-- Top Bar: Title and Icon -->
     <LinearLayout
