--- a/app/src/main/res/layout/activity_reservation_content.xml
+++ b/app/src/main/res/layout/activity_reservation_content.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C4C4C4"
-    tools:context=".ui.ReservationContent">
+    tools:context=".ui.content.reservation.ReservationContent">
 
     <ImageView
         android:src="@drawable/barangay_image"
