--- a/app/src/main/res/layout/_all_layout_service_item.xml
+++ b/app/src/main/res/layout/_all_layout_service_item.xml
@@ -9,9 +9,8 @@
 
 
     <LinearLayout
-        android:layout_marginStart="20dp"
         android:id="@+id/service_id"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
@@ -164,11 +163,10 @@
 
     <!-- Second row of buttons -->
     <LinearLayout
-        android:layout_marginStart="20dp"
         android:id="@+id/service_id2"
         android:layout_marginTop="20dp"
         android:layout_below="@id/service_id"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
