--- a/app/src/main/res/layout/_layout_news_item.xml
+++ b/app/src/main/res/layout/_layout_news_item.xml
@@ -6,15 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".ui.content.news.NewsView"
+    tools:context=".ui.content.news.ui.NewsView"
     tools:ignore="UseCompoundDrawables">
 
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:layout_marginStart="5dp"
         android:elevation="10dp"
         android:background="@drawable/news_background"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp">
 
         <RelativeLayout
@@ -24,7 +23,9 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:background="#D9D9D9"
+                android:scaleType="centerCrop"
+                android:clipToOutline="true"
+                android:background="@drawable/rounded_image"
                 android:id="@+id/_image"
                 android:layout_width="180dp"
                 android:layout_height="140dp">
