--- a/app/src/main/res/layout/activity_official_view.xml
+++ b/app/src/main/res/layout/activity_official_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C4C4C4"
-    tools:context=".ui.OfficialView">
+    tools:context=".ui.content.official.ui.OfficialView">
 
     <ImageView
         android:src="@drawable/barangay_image"
